# BearBones

./: .gitignore  .gitmodules  Bootstrap.gd  CMakeLists.txt  Icon256x256.png.import  MainWindow.gd  MainWindow.tscn  README.md  export_presets.cfg  gitignore  project.godot
App/: bootstrap.gd  bootstrap.tscn
Branding/: 1_generate_icons.bat  21_VersionInfo.rc  21_VersionInfo.res  21_rh_log.txt  21_rh_log_release.txt  21_rh_script_editor.txt  21_rh_script_release.txt  2_apply_to_executables.bat  ResourceHacker.ini  _branding.afdesign
Changelogs/: cover_images.afdesign
GDNative/: Clipboard.gdnlib  Clipboard.gdns  HelloWorld.gdnlib  HelloWorld.gdns  NativeFileDialog.gdnlib  NativeFileDialog.gdns
GDNative/Clipboard/: CMakeLists.txt  Clipboard.cpp  Clipboard.h
GDNative/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  gdlibrary.cpp
GDNative/NativeFileDialog/: CMakeLists.txt  NativeFileDialog.cpp  NativeFileDialog.h
Theme/: 0_theme.afdesign  bg_gradient.tres  box_collapsible.tres  box_dialog.tres  box_dock.tres  box_dock_light.tres  box_inline.tres  box_inline_dock.tres  box_inline_gray.tres  box_navigation.tres  box_popupmenu.tres  button_accent.tres  button_accent_hover.tres  button_accent_pressed.tres  button_basic.tres  button_basic_hover.tres  button_basic_pressed.tres  button_emphasis.tres  button_emphasis_hover.tres  button_emphasis_pressed.tres  button_options.tres  button_options_hover.tres  button_options_pressed.tres  input_color_box.tres  input_line_edit.tres  input_line_edit_button.tres  input_line_edit_button_hover.tres  input_sliderbox.tres  (+33 more)
(+205 files in other folders)
